<resources>
  <string name="app_name">Group Expenses</string>
  <string name="btn_add_data">Add Data</string>
  <string name="btn_settlement">Settlement</string>
  <string name="txt_total">Total:</string>
  <string name="txt_avg">Average:</string>
  <string name="txt_name">Name</string>
  <string name="txt_amount">Amount</string>
  <string name="description">Description</string>
  <string name="add">Add</string>
  <string name="payer">Payer</string>
  <string name="payee">Payee</string>
  <string name="amount">Amount</string>
  <string name="err_invalid_name">Name is not valid!</string>
  <string name="err_invalid_amount">Not a valid amount</string>
  <string name="err_invalid_description">Description can\'t be empty</string>
  <string name="zero">0</string>
</resources>
