<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".MainFragment">

  <Button
    android:id="@+id/btn_settlement"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:text="@string/btn_settlement"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toEndOf="@+id/btn_add_data" />

  <Button
    android:id="@+id/btn_add_data"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:text="@string/btn_add_data"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/btn_settlement"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent" />

  <TextView
    android:id="@+id/txt_total"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/txt_total"
    android:textSize="25sp"
    app:layout_constraintBaseline_toBaselineOf="@+id/txt_expenses_total"
    app:layout_constraintStart_toStartOf="@+id/guideline" />

  <TextView
    android:id="@+id/txt_expenses_total"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="0"
    android:textSize="25sp"
    app:layout_constraintStart_toStartOf="@+id/guideline2"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/txt_avg"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/txt_avg"
    android:textSize="25sp"
    app:layout_constraintBaseline_toBaselineOf="@+id/txt_expenses_avr"
    app:layout_constraintStart_toStartOf="@+id/guideline" />

  <TextView
    android:id="@+id/txt_expenses_avr"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="0"
    android:textSize="25sp"
    app:layout_constraintStart_toStartOf="@+id/guideline2"
    app:layout_constraintTop_toBottomOf="@+id/txt_expenses_total" />

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_begin="37dp" />

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_begin="251dp" />

  <ScrollView
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp"
    app:layout_constraintBottom_toTopOf="@+id/guideline4"
    app:layout_constraintEnd_toStartOf="@+id/guideline3"
    app:layout_constraintStart_toStartOf="@+id/guideline"
    app:layout_constraintTop_toBottomOf="@+id/txt_expenses_avr">

    <TableLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <TableRow>
        <TextView
          android:text="@string/txt_name"
          android:gravity="start"
          android:layout_weight=".7"/>
        <TextView
          android:text="@string/txt_amount"
          android:gravity="start"
          android:layout_weight=".3"/>
      </TableRow>
    </TableLayout>
  </ScrollView>

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_begin="373dp" />

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    app:layout_constraintGuide_begin="661dp" />

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline5"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_begin="102dp" />

</androidx.constraintlayout.widget.ConstraintLayout>