<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/dataentry_view"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".DataEntryFragment">

  <com.google.android.material.textfield.TextInputEditText
    android:id="@+id/edit_description"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:hint="@string/description"
    app:layout_constraintBottom_toTopOf="@+id/btn_add_expense"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/edit_amount" />

  <com.google.android.material.textfield.TextInputEditText
    android:id="@+id/edit_person"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:hint="@string/txt_name"
    app:layout_constraintBottom_toTopOf="@+id/edit_amount"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/txt_add_expenses_error" />

  <com.google.android.material.textfield.TextInputEditText
    android:id="@+id/edit_amount"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:hint="@string/txt_amount"
    android:inputType="numberDecimal"
    app:layout_constraintBottom_toTopOf="@+id/edit_description"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/edit_person" />

  <Button
    android:id="@+id/btn_cancel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@android:string/cancel"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toEndOf="@+id/btn_add_expense"
    app:layout_constraintTop_toBottomOf="@+id/edit_description" />

  <Button
    android:id="@+id/btn_add_expense"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:clickable="false"
    android:enabled="false"
    android:text="@string/add"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/btn_cancel"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/edit_description" />

  <TextView
    android:id="@+id/txt_add_expenses_error"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="#D50000"
    android:textColorHighlight="#D50000"
    android:textColorHint="#D50000"
    android:textSize="24sp"
    android:visibility="invisible"
    app:layout_constraintBottom_toTopOf="@+id/edit_person"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_chainStyle="spread"
    tools:text="Placeholder error"
    tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>